--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-
+    <button>Change Theme</button>
     <div id="user"></div>
 
     <div id="message-div"></div>
