dark theme working

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <button class="btn btn-outline-success my-2 my-sm-0" type="clear">CLEAR</button>
         </form>
             <div class="form-check d-flex justify-content">
-                <input class="form-check-input" type="checkbox" value="" id="darkTheme">
+                <input class="form-check-input" type="checkbox" value="" id="dark-theme">
                 <label class="form-check-label" for="darkTheme">
                     Dark Theme
                 </label>
@@ -36,11 +36,15 @@
                 <button class= "btn btn-outline-success my-2-sm-0" type = "change">CHANGE</button>
             </div>
     </nav>
-    <h1>Messages:</h1>
+    <div id="chat-container" class="none">
 
-    <div id="user"></div>
+        <h1>Messages:</h1>
 
-    <div id="message-div"></div>
+        <div id="user"></div>
+
+        <div id="message-div"></div>
+
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
