--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     Dark Theme
                 </label>
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="largeTheme">
+                <input class="form-check-input" type="checkbox" value="" id="large-theme">
                 <label class="form-check-label" for="largeTheme">
                     Large Theme
                 </label>
