--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <a class="navbar-brand" href="#">Logo</a>
                 </div>
                 <div class="col">
-                    <input class="form-control mr-lg-2 d-flex justify-content-flex-start" id="textbox" size="100%" type="input" placeholder="Enter Message">
+                    <input class="form-control mr-lg-2 d-flex justify-content-flex-start" id="text-box" size="100%" type="input" placeholder="Enter Message">
                 </div>
                 <div class="col clear d-flex justify-content-flex-end">
                     <button class="btn btn-outline-dark my-2 my-sm-0" type="clear">CLEAR</button>
@@ -29,16 +29,16 @@
         <div class="row">
             <div class="col">
                 <div class="form-check  secondnav d-flex justify-content">
-                    <input class="form-check-input" type="checkbox" value="" id="darkTheme">
-                    <label class="form-check-label" for="darkTheme">
+                    <input class="form-check-input" type="checkbox" value="" id="dark-theme">
+                    <label class="form-check-label" for="dark-theme">
                         Dark Theme
                     </label>
                 </div>
             </div>
             <div class="col">
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="largeTheme">
-                    <label class="form-check-label" for="largeTheme">
+                    <input class="form-check-input" type="checkbox" value="" id="large-theme">
+                    <label class="form-check-label" for="large-theme">
                         Large Theme
                     </label>
                 </div>
