--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-
+<!-- 
     <nav class="users navbar-expand-lg navbar-light bg-light fixed-top">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03"
             aria-expanded="false" aria-label="Toggle navigation">
@@ -34,9 +34,38 @@
                 <label class="form-check-label" for="largeTheme">
                     Large Theme
                 </label>
-                <button class= "btn btn-outline-success my-2-sm-0" type = "change">CHANGE</button>
+
+                <button class= "btn btn-outline-success my-2-sm-0" type = "change">CHANGE THEME</button>
+                
+
             </div>
-    </nav>
+            
+    </nav> -->
+   <!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+    Launch demo modal
+  </button>
+  
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalCenterTitle">Color Changer!</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">Choose what color you'd like to change</div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Background Color</button>
+          <button type="button"class="btn btn-primary">Text Color</button>
+          <button type="button"class="btn btn-success">Save</button>
+        </div>
+      </div>
+    </div>
+  </div>
     <div id="chat-container" class="none">
 
         <h1>Messages:</h1>
