--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="modal-body"></div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary" data-dismiss="modal">Save changes</button>
+              <button type="button" class="btn btn-primary" data-dismiss="modal" id="modal-save">Save changes</button>
             </div>
           </div>
         </div>
