--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <input class="form-control mr-lg-2 d-flex justify-content-flex-start" id="text-box" size="100%" type="input" placeholder="Enter Message">
                 </div>
                 <div class="col clear d-flex justify-content-flex-end">
-                    <button class="btn btn-outline-dark my-2 my-sm-0" type="clear">CLEAR</button>
+                    <button class="btn btn-outline-dark my-2 my-sm-0" id="clear-buton" type="clear">CLEAR</button>
                 </div>
             </form>
         </div>
