--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@
                 <label for="modal-background-color">Change Background Color</label>
                 <input type="checkbox" id="modal-text-color"/>
                 <label for="modal-text-color">Change Text Color</label>
+
+                <h5>Popover in a modal</h5>
+  <p>This <a href="#" role="button" class="btn btn-secondary popover-test" title="Popover title" data-content="Popover body content is set in this attribute.">button</a> triggers a popover on click.</p>
+  <hr>
+  <h5>Tooltips in a modal</h5>
+  <p><a href="#" class="tooltip-test" title="Tooltip">This link</a> and <a href="#" class="tooltip-test" title="Tooltip">that link</a> have tooltips on hover.</p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
