--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <nav class="users container navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="row">
-            <form class="form-inline my-2 my-lg-0">
+            <form id="text-form" class="form-inline my-2 my-lg-0">
                 <div class="col">
                     <a class="navbar-brand" href="#">Logo</a>
                 </div>
