--- a/index.html
+++ b/index.html
@@ -65,7 +65,16 @@
                 <span aria-hidden="true">&times;</span>
                 </button>
             </div>
+
             <div class="modal-body">
+                <h5>Popover in a modal</h5>
+                <p>This <a href="#" role="button" class="btn btn-secondary popover-test" title="Popover title" data-content="Popover body content is set in this attribute.">button</a> triggers a popover on click.</p>
+                <hr>
+                <h5>Tooltips in a modal</h5>
+                <p><a href="#" class="tooltip-test" title="Tooltip">This link</a> and <a href="#" class="tooltip-test" title="Tooltip">that link</a> have tooltips on hover.</p>
+            </div>
+
+            <!-- <div class="modal-body">
                 <input type="checkbox" id="modal-background-color"/>
                 <label for="modal-background-color">Change Background Color</label>
                 <input type="checkbox" id="modal-text-color"/>
@@ -76,7 +85,7 @@
                 <hr>
                 <h5>Tooltips in a modal</h5>
                 <p><a href="#" class="tooltip-test" title="Tooltip">This link</a> and <a href="#" class="tooltip-test" title="Tooltip">that link</a> have tooltips on hover.</p>
-            </div>
+            </div> -->
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                 <button type="button" class="btn btn-primary" data-dismiss="modal" id="modal-save">Save changes</button>
