--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal" id="modal-default">Default</button>
                 <button type="button" class="btn btn-primary" data-dismiss="modal" id="modal-save">Save changes</button>
             </div>
             </div>
