button color fix

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
             </div>
             <div class="modal-body">
                 <div id="color-box"></div>
-                <button id="modal-background-color" class="btn">Change Background Color</button>
-                <button id="modal-text-color" class="btn">Change Text Color</button>
+                <button id="modal-background-color" class="btn btn-success">Change Background Color</button>
+                <button id="modal-text-color" class="btn btn-success">Change Text Color</button>
                 
             </div>
             <div class="modal-footer">
