--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
             </div>
             <div class="col">
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">CHANGE</button>
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Change Theme</button>
             </div>
         </div>
     
@@ -61,7 +61,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Color Selector</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
                 </button>
