--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
             <div id="text-form" class="form-inline my-2 my-lg-0">
                 <div class="col">
-                    <a class="navbar-brand" href="#">Logo</a>
+                    <a class="navbar-brand" href="#">Chatty!</a>
                 </div>
                 <div class="col">
                     <input class="form-control mr-lg-2 d-flex justify-content-flex-start" id="text-box" size="100%" type="input" placeholder="Enter Message">
