--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <h1>Messages:</h1>
         <div class="col">
          
-        <div id="message-div" class="mx-auto message flex-fill"></div>
+        <div id="message-div" class="mx-auto message"></div>
         </div>
         
     </div>
@@ -108,3 +108,4 @@
 </body>
 
 </html>
+
